@@ -145,6 +145,9 @@ BUGFIXES:
 
   ZOOKEEPER-1412. java client watches inconsistently triggered on
   reconnect (phunt)
+
+  ZOOKEEPER-1344. ZooKeeper client multi-update command is not
+  considering the Chroot request (Rakesh R via phunt)
   
 IMPROVEMENTS:
 
